# DSYS

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  buildAndRunC#  cmake_install.cmake  exe
DAPP/: main.cpp  main.cs
DDEMO/DCOREDUMPDEMO/DEMO0/: compile  exe  main.cpp
DDEMO/DMAKEDEMO/DEMO0/: CMakeLists.txt  DEMOEXE  Makefile  compile
DDEMO/DMAKEDEMO/DEMO0/APP/: DEMOMAIN.cpp
DDEMO/DMAKEDEMO/DEMO0/SRC/: DEMOCLASS.cpp  DEMOCLASS.h  DEMOCLASS.h.gch
DI3/: config
DLOG/: .~lock.WSS.ods#  WSS.ods
DPICTURES/sinOpp/: tmp.txt
DSCRIPTS/: configure  gitCommands  jpgToAsciiJpg  recordVideo  screenShot.sh  slideShow.sh
DSRC/D3DMODELER/: DMODELMANAGER.cpp  DMODELMANAGER.h  DMODELMANAGER_APP.cpp
DSRC/DBLENDER/: DDIAMONDGEN.blend1
DSRC/DCLIENT/: DCLIENT.cpp  DCLIENT.cs  DCLIENT.h
DSRC/DCLIENTTCP/: DCLIENTTCP.cpp  DCLIENTTCP.cs  DCLIENTTCP.h
DSRC/DCLIENTUDP/: DCLIENTUDP.cpp  DCLIENTUDP.cs  DCLIENTUDP.h
DSRC/DFILE/: DFILE.cpp  DFILE.cs  DFILE.h
DSRC/DGLUTWINDOW/: DGLUTWINDOW.cpp  DGLUTWINDOW.h  GLUTHELPERFUNCTIONS.cpp
DSRC/DGO/DGODEMO/: build
DSRC/DGODEMO/: demo  demo.go  run
DSRC/DGRAPHICS/: DGRAPHICS.cpp  DGRAPHICS.h
DSRC/DGTKWINDOW/: DGTKWINDOW.cpp  DGTKWINDOW.h
DSRC/DKINECT/: DKINECT.cpp  DKINECT.h
DSRC/DLLC/: DLLC.cpp  DLLC.h
DSRC/DML/: DML.cpp  DML.h  DOP.cpp
DSRC/DMODEL/: DMODEL.cpp  DMODEL.h
DSRC/DNETWORK/: DNETWORK.cpp  DNETWORK.h
DSRC/DOBJ/: DOBJ.cpp  DOBJ.cs  DOBJ.h
DSRC/DOPENCV/: DOPENCV.cpp  DOPENCV.h
DSRC/DPYTHON/: DDIAMONDGEN.blend  DDIAMONDGEN.py  Text
DSRC/DSERVER/: DSERVER.cpp  DSERVER.h
DSRC/DSERVERTCP/: DSERVERTCP.cpp  DSERVERTCP.cs  DSERVERTCP.h
DSRC/DSERVERUDP/: DSERVER.cs  DSERVERUDP.cpp  DSERVERUDP.cs  DSERVERUDP.h
DSRC/DSFTGEN/: DSFTGEN.cpp  DSFTGEN.h
DSRC/DSQL/: DSQL.cpp  DSQL.h
DSRC/DTALK/: DTALK.cpp  DTALK.h
DSRC/DTEXTEDITOR/: DTEXTEDITOR.cpp  DTEXTEDITOR.h
DSRC/DTHREAD/: DTHREAD.cs
DSRC/DTHREADCONTROLLER/: DTHREADCONTROLLER.cs
DSRC/DTODO/: DTODO.cpp  DTODO.h
DSRC/DXM/: DXM.cpp  DXM.h
DTEX/Biology/: Biology.aux  Biology.out  Biology.tex
DTEX/Book/: book.tex
DTEX/Business/: startUpBusiness.aux  startUpBusiness.out  startUpBusiness.tex
DTEX/ComputerScience/: SoftwareCompilation.aux  SoftwareCompilation.out  SoftwareCompilation.tex  SoftwareDevelopment.aux  SoftwareDevelopment.out  SoftwareDevelopment.tex
DTEX/CurriculumVitae/: companyList.aux  companyList.out  companyList.tex  jobHistory.aux  jobHistory.tex  resume.out  resume.tex  resumeSoftwareEngineeringVersion.aux  resumeSoftwareEngineeringVersion.tex
DTEX/EMag/: chemistry.aux  chemistry.out  chemistry.tex  radio.tex
DTEX/Economics/: stockMarket.aux  stockMarket.out  stockMarket.tex
DTEX/Mathmatics/: MachineLearning.aux  MachineLearning.out  MachineLearning.tex  NotesOnRudinFunctionalAnalysis.aux  NotesOnRudinFunctionalAnalysis.out  NotesOnRudinFunctionalAnalysis.tex
DTEX/Misc/: groceryList.aux  groceryList.out  groceryList.tex
DTEX/Movies/: ReviewAndThoughts.aux  ReviewAndThoughts.out  ReviewAndThoughts.tex
DTEX/MusicTheory/: guitarTab.tex
DTEX/SoftwareToolDocumentation/: CVS_Documentation.aux  CVS_Documentation.out  CVS_Documentation.tex
scripts/: killUnity
